--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,3 +1,13 @@
-.buttonTest {
-  color: blueGrey500;
+#react-paginate ul {
+    display: inline-block;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+#react-paginate li {
+    display: inline-block;
+}
+
+#react-paginate .break a {
+    cursor: default;
 }
