--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,16 @@
 .active {
-  color: green;
+  color: red;
+}
+.react-paginate ul {
+    display: inline-block;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.react-paginate li {
+    display: inline-block;
+}
+
+.react-paginate .break a {
+    cursor: default;
 }
